# surgical-instrument-segmentation

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ORIGINAL.md  README_REVISED.md  analyze_generated_masks.py  analyze_mask_statistics.py  analyze_model.py  check_both_videos.py  check_generated_masks.py  compare_videos.py  diagnose_predictions.py  docker-compose.yml  environment.yml  generate_impressive_results.py  generate_masks_from_model.py  instrument_segmentation.py  instrument_segmentation_model.pth  prepare_cholec80.py  prepare_cholecseg8k_assets.py  prepare_full_dataset.py  pyproject.toml  rename_cholec80_assets.py  requirements.txt  test_single_frame.py  train_comparative.py  visualize_comparison.py
.github/workflows/: ci.yml  tests.yml
config/: default.yaml
docs/: ARTIFACTS.md  DATASET_SETUP.md  ETHICS.md  METHODS.md  MODEL_CARD.md  RESULTS_PROVENANCE.md  narrative_validation.md
outputs/: benchmark_results.json
outputs/comparative/: comparison.json  comparison_table.md  deeplabv3_history.json  deeplabv3_model.pth  unet_history.json  unet_model.pth
outputs/models/: pretrained_weights.json
outputs/quarantine/: benchmark_results.json
outputs/remediation_run/: dataset_manifest.json  environment.txt  git_sha.txt  metrics.json  splits.json  test_results.txt
outputs/run_cholecseg_video01_test_20260126_223222/: config_hash.txt  dataset_manifest.json  environment.txt  git_sha.txt  metrics.json  model_checkpoint.pth  model_checksum.txt  run_notes.txt  splits.json
scripts/: analyze_generated_masks.py  analyze_mask_statistics.py  benchmark_inference.py  check_both_videos.py  check_generated_masks.py  compare_videos.py  debug_single_frame.py  demo_best_cases.py  generate_impressive_results.py  generate_masks.py  prepare_cholecseg8k.py  prepare_full_dataset.py  verify_reproducibility.py  visualize_comparison.py  visualize_random_sample.py
src/surgical_segmentation/: __init__.py
src/surgical_segmentation/datasets/: surgical_dataset.py
src/surgical_segmentation/evaluation/: __init__.py  analyzer.py  metrics.py  statistics.py
src/surgical_segmentation/models/: __init__.py  deeplabv3.py  unet.py
src/surgical_segmentation/training/: __init__.py  cross_validation.py  trainer.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_cross_validation.py  test_datasets.py  test_evaluation_integration.py  test_metrics.py  test_models.py  test_statistics.py  test_trainer.py  test_training_integration.py
(+2 files in other folders)
